allow breaking long format strings to prevent overflow

--- a/style.css
+++ b/style.css
@@ -103,10 +103,12 @@ body {
   width: 80%;
   margin: 5px 0;
   padding: 10px;
+  color: black;
   background-color: lightgray;
   border: 0;
   border-radius: 10px;
   font-family: monospace;
+  word-break: break-all;
   cursor: pointer;
 }
 
